# Ray-Tracer

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
apps/: main.cpp
include/: color.hpp  image.hpp  maths.hpp  object.hpp  ray.hpp  utils.hpp
src/: Ecran.cpp  Ecran.hpp  color.cpp  color.hpp  main.cpp  ray.cpp  utils.cpp  utils.hpp
src/Scene/: Scene.hpp  objects.hpp
src/display/: Ecran.cpp  Ecran.hpp  Image.cpp  Image.hpp  Ray.hpp  image.cpp  image.hpp  img-printer.cpp
src/materials/: color.cpp  color.hpp
src/maths/: Vector3D.cpp  Vector3D.hpp
src/object/: collider.cpp  object.cpp
src/render/: printer.cpp  printer.hpp
